start project DIAMS

--- a/app/styles/layout.less
+++ b/app/styles/layout.less
@@ -22,8 +22,7 @@ body {
   -webkit-font-smoothing: antialiased;
   background:@wa-white;
   font-size: 1.4rem;
-  margin: 0 auto;
-  max-width: 980px;
+  margin: 0;
 }
 img{
   max-width: 100%;
