integration DOM & CSS

--- a/app/styles/components/header.less
+++ b/app/styles/components/header.less
@@ -1,11 +1,13 @@
-.heading{
+.diamsHeading{
   position: fixed;
-  max-width: 1210px;
+  background-color: #004893;
+  width: 100%;
   margin: 0 auto;
 
-  .h1{
+  .diamsH1{
     margin: 10px 0;
     font-size: 2.8rem;
     text-align: center;
+    color: white;
   }
 }
