--- a/app/styles/components/header.less
+++ b/app/styles/components/header.less
@@ -3,6 +3,13 @@
   background-color: #004893;
   width: 100%;
   margin: 0 auto;
+  border-bottom: 1px solid #41a2f9;
+
+  -moz-box-shadow: 0px 28px 67px 0px #fff;
+  -webkit-box-shadow: 0px 28px 67px 0px #fff;
+  -o-box-shadow: 0px 28px 67px 0px #fff;
+  box-shadow: 0px 28px 67px 0px #fff;
+  filter:progid:DXImageTransform.Microsoft.Shadow(color=#fff, Direction=180, Strength=5);
 
   .diamsH1{
     margin: 10px 0;
