--- a/app/styles/components/navigation.less
+++ b/app/styles/components/navigation.less
@@ -1,7 +1,14 @@
+.diamsNavContainer{
+  background: url('../../images/axa-logo.jpg') no-repeat center 0;
+  background-size: 60px;
+  position: fixed;
+  padding-top: 80px;
+
+}
 .diamsNavigation{
   a{
-    &:active{
-      color: #00AA00;
+    &:hover{
+      opacity: 0.8;
     }
   }
 }
