--- a/app/styles/layout.less
+++ b/app/styles/layout.less
@@ -38,14 +38,20 @@ a:focus{
 
 a{
   text-decoration: none;
+  color: #203866;
 }
 
 h1{
   font-size: 5rem;
 }
 
+sup{
+  position: initial;
+}
+
 .diamsContainer{
   padding-top: 52px;
+  color: #203866;
 }
 
 .diamsFrameContainer{
@@ -53,16 +59,13 @@ h1{
   max-width: 1210px;
   width: 100%;
 
-  .diamsNavContainer{
-    position: fixed;
-    margin-top: 80px;
-  }
   .diamsMainContent{
     margin-left: 300px;
-    margin-top: 18px;
+    margin-top: 35px;
 
     .box{
       width: 100%;
+      overflow: auto;
     }
 
     .diamsMainColumn,
@@ -71,12 +74,10 @@ h1{
     }
 
     .diamsMainColumn{
-      width: 79%;
+      width: 74%;
       margin-right: 1%;
     }
 
-    .diamsAsideColumn{
-      width: 20%;
-    }
+
   }
 }
