--- a/app/styles/layout.less
+++ b/app/styles/layout.less
@@ -49,7 +49,7 @@ sup{
   position: initial;
 }
 
-.diamsContainer{
+.diamsMainContainer{
   padding-top: 52px;
   color: #203866;
 }
@@ -58,26 +58,4 @@ sup{
   margin: 0 auto;
   max-width: 1210px;
   width: 100%;
-
-  .diamsMainContent{
-    margin-left: 300px;
-    margin-top: 35px;
-
-    .box{
-      width: 100%;
-      overflow: auto;
-    }
-
-    .diamsMainColumn,
-    .diamsAsideColumn{
-      float: left;
-    }
-
-    .diamsMainColumn{
-      width: 74%;
-      margin-right: 1%;
-    }
-
-
-  }
 }
