--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -13,5 +13,6 @@
 /* COMPONENTS */
 @import "components/header";
 @import "components/navigation";
-@import "components/element";
+@import "components/mainContent";
+@import "components/mainColumn";
 @import "components/sideBar";
