add css for input

--- a/app/styles/components/mainContent.less
+++ b/app/styles/components/mainContent.less
@@ -1,10 +1,35 @@
 .diamsMainContent{
   margin-left: 300px;
   margin-top: 35px;
+  padding-bottom: 700px;
 
   .diamsBox{
     width: 100%;
     overflow: auto;
+    border-bottom: 1px solid #f0f0f0;
+  }
+
+  .diamsContent{
+    ul{
+      li{
+        padding: 4px 0;
+      }
+    }
+
+    input,button{
+      border: 3px solid #2E74B9;
+      border-radius: 10px 10px 10px 10px;
+      padding: 7px;
+      margin-bottom: 5px;
+    }
+
+    button{
+      background-color: #5D9AD0;
+      color: #fff;
+    }
+    button[name=waitValidation]{
+      padding: 7px 30px;
+    }
   }
 
 }
