--- a/app/styles/components/navigation.less
+++ b/app/styles/components/navigation.less
@@ -6,7 +6,13 @@
 
 }
 .diamsNavigation{
+
+  .diamsList{
+    padding: 4px 0;
+  }
+
   a{
+    font-size: 1.6rem;
     &:hover{
       opacity: 0.8;
     }
