--- a/app/styles/components/sideBar.less
+++ b/app/styles/components/sideBar.less
@@ -1,7 +1,22 @@
 .diamsSideBar{
   float: left;
-  width: 25%;
+  width: 30%;
+
   .contactList{
     padding-left: 0;
+  }
+
+  ul{
+    li{
+      padding: 4px 0;
+    }
+  }
+
+  h2{
+    margin-bottom: 25px;
+  }
+
+  .infosContact{
+    margin-bottom: 15px;
   }
 }
