--- a/app/styles/layout.less
+++ b/app/styles/layout.less
@@ -21,7 +21,7 @@ html {
 body {
   -webkit-font-smoothing: antialiased;
   background-color:#fcfcfc;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   margin: 0;
 }
 img{
@@ -32,7 +32,9 @@ img{
 a,
 a:hover,
 a:active,
-a:focus{
+a:focus,
+input,
+button{
   outline: 0;
 }
 
