--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -12,4 +12,7 @@
 
 /* COMPONENTS */
 @import "components/header";
-@import "components/element";
+@import "components/navigation";
+@import "components/mainContent";
+@import "components/mainColumn";
+@import "components/sideBar";
